tests/integration/features/sdoc/document_grammar/validation/31_composite_node_declared_in_grammar_but_composite_is_False/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: The composite node's grammar element is declared as non-composite: [[SECTION]].
CHECK: Location: {{.*}}input.sdoc:22:1
